--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "q_tasks"
 version = "0.1.0"
-publish = false
 authors = ["<phoenix.mandala@pm.me>"]
 edition = "2024"
 
 [dependencies]
 bevy_ecs = "0.16"
-itertools = "0.14"
-thiserror = "2.0.12"
+bevy_tasks = "0.16"
+bevy_app = { version = "0.16", optional = true }
+
+[features]
+plugin = ['dep:bevy_app']
+default = ["plugin"]
+
+[dev-dependencies]
+bevy = "0.16"
